@@ -1,3 +1,9 @@
+2011-06-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-57
+	* Change "Update all existing ESModules" to "Import all ESModules".
+	* Add "Update all existing Modules".
+	* Remove some unreachable code in ConfigurationTreeActions.java
+	
 2011-06-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-56
 	* Bug fix: Fixes selection path errors. (bug 76145).
